[package]
name = "civ-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.25"
discord = { git = "https://github.com/ekshore/discord-rs" }
http = "0.2.9"
httparse = "1.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
timer = "0.2.0"
